--- a/FinalProject/app/src/main/res/layout/activity_main_page.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main_page.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="257dp"
+        android:layout_width="wrap_content"
         android:layout_height="62dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -16,13 +16,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="This is Main Page"
+        android:text="Main Page"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202" />
+        app:layout_constraintVertical_bias="0.22000003" />
 
     <Button
         android:id="@+id/logoutButton"
@@ -40,5 +40,13 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.41" />
+        app:layout_constraintVertical_bias="0.415" />
+
+    <Button
+        android:id="@+id/gyroLiveData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Gyro Data"
+        tools:layout_editor_absoluteX="136dp"
+        tools:layout_editor_absoluteY="287dp" />
 </android.support.constraint.ConstraintLayout>
