--- a/FinalProject/app/src/main/res/layout/activity_gyro_data.xml
+++ b/FinalProject/app/src/main/res/layout/activity_gyro_data.xml
@@ -51,6 +51,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="time" />
+        android:inputType="numberSigned" />
 
 </LinearLayout>
