--- a/April17_1/mobile/src/main/res/values/dimens.xml
+++ b/April17_1/mobile/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="vertical_margin">20dp</dimen>
     <dimen name="horizontal_margin">20dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
