--- a/April17_1/mobile/src/main/res/layout/activity_connection_page.xml
+++ b/April17_1/mobile/src/main/res/layout/activity_connection_page.xml
@@ -9,15 +9,12 @@
     tools:context=".ConnectionPage">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/connectingToWatch"
         android:layout_width="344dp"
         android:layout_height="235dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Connecting to device..."
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:fontFamily="cursive"
