--- a/April17_1/mobile/src/main/res/layout/home_page.xml
+++ b/April17_1/mobile/src/main/res/layout/home_page.xml
@@ -21,22 +21,35 @@
 
     <Button
         android:id="@+id/start_sleep_button"
-        android:layout_width="204dp"
-        android:layout_height="60dp"
+        android:layout_width="228dp"
+        android:layout_height="59dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/navigation_bottom_color"
-        android:text="Start Sleep"
+        android:text="Launch Wearable App"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.955" />
+        app:layout_constraintVertical_bias="0.833" />
+
+    <TextView
+        android:id="@+id/connectingNotification"
+        android:layout_width="291dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start_sleep_button" />
 
 </android.support.constraint.ConstraintLayout>
