--- a/April17_1/mobile/src/main/res/layout/mobile_connection.xml
+++ b/April17_1/mobile/src/main/res/layout/mobile_connection.xml
@@ -18,7 +18,7 @@
         android:onClick="talkClick"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/connectingToWatch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
