--- a/April17_1/wear/src/main/res/layout/wear_connection.xml
+++ b/April17_1/wear/src/main/res/layout/wear_connection.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/home_page_background_official"
+    android:background="@drawable/wearbackground"
     android:theme="@android:style/Theme.Black.NoTitleBar"
     tools:context=".WearConnection"
     tools:deviceIds="wear">
@@ -31,8 +31,8 @@
 
         <Button
             android:id="@+id/startSleep"
-            android:layout_width="109dp"
-            android:layout_height="24dp"
+            android:layout_width="146dp"
+            android:layout_height="86dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -44,6 +44,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/connectivityNotification"
+            app:layout_constraintVertical_bias="0.333"
             tools:ignore="MissingConstraints" />
     </android.support.constraint.ConstraintLayout>
 </android.support.wear.widget.BoxInsetLayout>
