--- a/April17_1/mobile/src/main/res/layout/fragment_dashboard.xml
+++ b/April17_1/mobile/src/main/res/layout/fragment_dashboard.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/home_page_background_official"
     android:theme="@android:style/Theme.Black.NoTitleBar"
     tools:context=".DashboardPage">
 
     <TextView
-        android:layout_width="181dp"
+        android:id="@+id/firstSleepRecord"
+        android:layout_width="match_parent"
+        android:layout_height="78dp"
+        android:textColor="#FFFFFF"
+        android:textSize="36sp" />
+
+    <Button
+        android:id="@+id/firstSleepRecordButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:textColor="#FDFFFFFF"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.412"
-        tools:text="@string/title_dashboard" />
-</android.support.constraint.ConstraintLayout>
+        android:text="See More Details" />
+</LinearLayout>
