--- a/April17_1/mobile/src/main/res/layout/fragment_dashboard.xml
+++ b/April17_1/mobile/src/main/res/layout/fragment_dashboard.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/home_page_background_official"
     android:theme="@android:style/Theme.Black.NoTitleBar"
-    tools:context=".DashboardPage">
-
-    <TextView
-        android:id="@+id/firstSleepRecord"
-        android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:textColor="#FFFFFF"
-        android:textSize="36sp" />
+    tools:context=".SleepPage">
 
     <Button
-        android:id="@+id/firstSleepRecordButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="See More Details" />
-</LinearLayout>
+        android:id="@+id/statisticsButton"
+        android:layout_width="228dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="360dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/navigation_bottom_color"
+        android:text="Go to Statistics page"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+</android.support.constraint.ConstraintLayout>
