--- a/April17_1/mobile/src/main/res/layout/activity_sleeppage.xml
+++ b/April17_1/mobile/src/main/res/layout/activity_sleeppage.xml
@@ -11,19 +11,17 @@
     <Button
         android:id="@+id/statisticsButton"
         android:layout_width="228dp"
-        android:layout_height="59dp"
+        android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="360dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/navigation_bottom_color"
         android:text="Start DataCollecting"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.833" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
