--- a/April17_1/mobile/src/main/res/layout/activity_bottom_navigation.xml
+++ b/April17_1/mobile/src/main/res/layout/activity_bottom_navigation.xml
@@ -12,7 +12,7 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_n"></FrameLayout>
+        android:layout_above="@+id/bottom_n"/>
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_n"
         android:layout_width="match_parent"
