Pushing old changes from Sai

--- a/April17_1/mobile/src/main/res/layout/fragment_account.xml
+++ b/April17_1/mobile/src/main/res/layout/fragment_account.xml
@@ -126,7 +126,7 @@
                 android:src="@drawable/ic_account_circle_black_24dp" />
 
             <TextView
-                android:id="@+id/profile"
+                android:id="@+id/profiletext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
